--- a/技术人最佳实践.md
+++ b/技术人最佳实践.md
@@ -118,7 +118,7 @@
 
 <!--架构图-->
 
-<img src="/Users/didi/Library/Application Support/typora-user-images/image-20201121184011161.png" alt="image-20201121184011161" style="zoom: 50%;" />
+<img src="/Users/didi/Library/Application Support/typora-user-images/image-20201121184011161.png?row=true" alt="image-20201121184011161" style="zoom: 50%;" />
 
 <!-- 组件说明 -->
 
@@ -197,7 +197,7 @@
 
 ​	用下面图片描述事物的隔离级别，以及不同隔离级别之间的区别 ，假设有A、B两个事物，分别并行执行，事物A初始状态变量V1=1，事物A执行的中间过程中穿插事物B修改变量V1=2，并提交事物B，此时接着事物A继续获取变量V2并提交事物，提交事物后获取变量V3，假设变量V1、V2、V3的变化过程就是两个数据库连接操作同一条记录。。。
 
-<img src="/Users/didi/Library/Application Support/typora-user-images/image-20201121200340243.png" alt="image-20201121200340243" style="zoom:50%;" />
+<img src="/Users/didi/Library/Application Support/typora-user-images/image-20201121200340243.png?row=true" alt="image-20201121200340243" style="zoom:50%;" />
 
 ##### 原理解释
 
